--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="header-left-side center-row">
             <a href="">
-                <h2>name</h2>
+                <h2>Dennis Casiguran</h2>
             </a>
         </div>
 
@@ -38,15 +38,14 @@
     <section class="about-section center-row">
 
         <div class="about-image-container center-row">
-            <img src="" alt="">
+            <img src="./img/Fun Website Design.jpeg" alt="">
         </div>
 
         <div class="about-description-container center-column">
             <h1>My role as developer</h1>
             <h2>Dennis Casiguran</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur quo est veniam 
-            cum modi odio vitae, quidem autem amet sequi perferendis accusantium numquam saepe quos vero neque eaque nobis?
+            <p>I specialize in creating dynamic, user-friendly websites and applications that combine clean design with robust functionality. I have a strong foundation in front-end and back-end development, leveraging technologies such as HTML, CSS, JavaScript, and frameworks like React to build engaging user interfaces. On the back end, I work with languages like Python, PHP, or Node.js to ensure seamless integration and performance. My focus is on delivering responsive, scalable, and secure solutions tailored to meet client needs. With a problem-solving mindset and a commitment to staying current with emerging trends, I thrive in transforming ideas into digital experiences that drive results.
         </p>
 
         
